# mixmod

./: .gitignore  LICENSE.txt  README.md  estimate.py  mixture.py  setup.cfg  tutorial.ipynb
src/mixmod/: __init__.py  estimate.py  estimators.py  mixture.py
src/pymix/: mixture.py
