[metadata]
name = mixmod
version = attr: mixmod.__version__
author = Marc Singleton
author_email = marcsingleton@berkeley.edu
description = An implementation of mixture models with robust fitting methods for a fixed set of components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcsingleton/mixmod
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
	numpy >= 1.17
	scipy >= 1.8

[options.packages.find]
where = src